<resources>
    <string name="app_name">To-do list</string>
    <string name="open_nav">Open navigation</string>
    <string name="close_nav">Close navigation</string>
    <string name="semicircles">Semicircles</string>
    <string name="tasks_list">Tasks list</string>
    <string name="add_task">Add task</string>
    <string name="delete_tasks">Delete tasks</string>
    <string name="activity_main_image">Man with a phone</string>
    <string name="activity_main_header">Gets things done with TODO</string>
    <string name="activity_main_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Interdum dictum tempus, interdum at dignissim metus. Ultricies sed nunc.</string>
    <string name="get_started_button_text">Get Started</string>
    <string name="sign_in_activity_header">Welcome back!</string>
    <string name="sign_in_activity_image">Man with a phone</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter password</string>
    <string name="sign_in_activity_forgot_password">Forgot password</string>
    <string name="sign_in_activity_no_account">Don\'t have an account?</string>
    <string name="sign_up_activity_account_exists">Already have an account ?</string>
    <string name="sign_in_activity_sign_up_button">Sign up</string>
    <string name="sign_up_activity_sign_in_button">Sign in</string>
    <string name="sign_up_activity_header">Welcome onboard!</string>
    <string name="sign_up_activity_description">Let’s help you meet up your tasks</string>
    <string name="sign_up_activity_name_hint">Enter your full name</string>
    <string name="repeat_password">Confirm password</string>
    <string name="enter_task">Enter your task:</string>
    <string name="task_hint">Task</string>
    <string name="add_task_button">Add task</string>
    <string name="enter_your_new_email">Enter your new email: </string>
    <string name="change_email_hint">Email</string>
    <string name="change_email_button">Change email</string>
    <string name="enter_your_new_name">Enter your new name: </string>
    <string name="change_name_hint">Name</string>
    <string name="change_name_button">Change name</string>
    <string name="enter_your_new_password">Enter your new password:</string>
    <string name="change_password_hint">Password</string>
    <string name="change_password_button">Change password</string>
    <string name="delete_account_text">Do you want to delete your account?</string>
    <string name="delete_account_button">Delete account</string>
    <string name="delete_tasks_text">What tasks do you want to delete?</string>
    <string name="delete_done_tasks_button">Delete done tasks</string>
    <string name="delete_all_tasks_button">Delete all tasks</string>
    <string name="image_uploading">Image is uploading</string>
    <string name="sign_in_again_text">Before making changes \n in your account \n please enter your email \n and password again</string>
    <string name="authenticate_button">Authenticate</string>
    <string name="sign_out_text">Do you want to sign out?</string>
    <string name="sign_out_button">Sign out</string>
    <string name="welcome_text">Welcome, %1$s</string>
    <string name="change_photo_menu_item">Change photo</string>
    <string name="change_name_menu_item">Change name</string>
    <string name="change_email_menu_item">Change email</string>
    <string name="change_password_menu_item">Change password</string>
    <string name="delete_account_menu_item">Delete account</string>
    <string name="sign_out_menu_item">Sign out</string>
</resources>