<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="30dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_again_text"
        android:textAlignment="center"
        android:textSize="15sp"/>

    <EditText
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:id="@+id/reauthenticate_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textColor="@color/azure"
        android:textColorHint="@color/black"/>

    <EditText
        android:autofillHints="password"
        android:id="@+id/reauthenticate_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textColor="@color/azure"
        android:textColorHint="@color/black"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/authenticate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azure"
        android:text="@string/authenticate_button"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"/>
</LinearLayout>