<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="30dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_new_password"
        android:textSize="15sp"/>

    <EditText
        android:autofillHints="password"
        android:id="@+id/change_password_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/change_password_hint"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textColor="@color/azure"
        android:textColorHint="@color/black"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azure"
        android:text="@string/change_password_button"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"/>
</LinearLayout>